--- a/20241119_discord_keyword_extractor/test_code.ipynb
+++ b/20241119_discord_keyword_extractor/test_code.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
        "' ## 최근접이웃 분류기의 개념   ### 최근접이웃 분류기의 개념   ![](/assets/images/20241117_001_001.png)   분류 문제를 생각해봤을 때, 간단한 분류 방법으로는 `새로 주어진 데이터 xnew에 대해 거리가 가장 가까운 데이터를 식별하고, 식별된 근접 데이터의 클래스를 xnew으 클래스로 할당한다.` 와 같이, 근처에 있는 데이터와 동일한 클래스로 분류하는 방법을 생각해 볼 수 있을 것이다. 이것이 바로 최근접이웃 분류기의 개념이다.   ### 최근접이웃 분류기의 수식화     데이터 x와 x1간 거리를 `d(x, x1)`이라고 했을 때 x의 클래스를 결정짓는 함수 즉, 최근접이웃 분류기의 결정규칙을 식으로 표현하면 아래와 같다.   ![](/assets/images/20241117_001_002.png)   ### 최근접이웃 분류기의 처리과정   |순서|단계|설명| |---|---|---| |1|거리 계산|새로운 데이터 x와 모든 학습 데이터 {x1, x2, ... xn}과의 거리를 계산한다.| |2|최근접 이웃 식별|거리가 가장 가까운 데이터 xmin을 식별한다.| |3|클래스 할당|새로운 데이터 x에 대해 xmin의 클래스와 같은 클래스를 할당하도록 결정한다.| ### 최근접이웃 분류기의 문제점   이러한 최근접이웃 분류기는 문제점을 가지고 있는데 그것은 (1)데이터 잡음에 민감하다는 것과 (2)과다적합이 발생한다는 점이다.   |문제점|설명| |---|---| |데이터 잡음에 민감|- 데이터 잡음이란, 이상치와 같이 일반적이지 않은 데이터를 의미한다.<br>- 최근접이웃 분류기는 가장 가까운 \"하나의 데이터\"만을 참고하기 때문에, 참고하는 데이터가 이상치인 경우에는 오분류가 발생할 가능성이 높다.| |과다적합|- 과다적합 또는 과적합이라고 부르는 것은, 분류 모델이 학습 데이터에만 너무 적합하여 현실 세계 혹은 테스트 데이터에서 분류율이 떨어지는 문제를 말한다.<br>- 앞서 살펴본 데이터 잡음에 민감하다는 문제와 일정 부분 비슷한 면이 있다.| ![](/assets/images/20241117_001_003.png)   |구분|KNN (K=1)|베이즈 분류기| |---|---|---| |학습 정확도|1.00|0.95| |테스트 정확도|0.87|0.96| ## K-최근접이웃 분류기의 개념   K-최근접이웃 분류기(K-Nearest Neighbors)는 새로 주어진 데이터 xnew에 대해, 학습데이터에서 이와 가장 가까운 순서대로 K개의 데이터를 선별하여 후보 데이터집합 N(x)를 만든 뒤, 이 집합에 포함된 각 데이터의 클래스 중 가장 등장빈도가 높은 클래스를 xnew의 클래스로 할당하는 방법이다.   최근접이웃 분류기가 데이터 잡음에 민감하고, 과다적합 문제에 따른 오분류율이 높은 문제를 보완하고자 나온 분류기이다. 최근접이웃 분류기가 xnew 데이터와 `가장 가까운 데이터 하나` 만을 참고했다면, K-최근접이웃 분류기는 xnew 데이터와 `가장 가까운 순으로 k 개의 데이터` 를 참고한다는 점에서 차이가 있다.   ![](/assets/images/20241117_001_004.png)   ### K-최근접이웃 분류기의 수식화   K-최근접이웃 분류기는 학습 데이터 중 xnew와 거리가 가까운 K개의 데이터의 클래스를 확인하고, 이 클래스들 중 가장 등장빈도가 높은 클래스를 xnew에 할당하는 것이다.   ![](/assets/images/20241117_001_005.png)   ### K-최근접이웃 분류기의 처리과정   |순서|단계|설명| |---|---|---| |1|거리 계산|새로운 데이터 x와 모든 학습 데이터 {x1, x2, ... xn}과의 거리를 계산한다.| |2|근접 이웃 식별|거리가 가장 가까운 순서로 K개의 데이터를 찾아, 후보 집합 N(x)를 만든다.| |3|클래스 빈도 탐색|후보 집합 N(x)에 속한 각 데이터들이 속한 클래스들을 확인하고<br>식별된 클래스들 각각의 등장빈도수를 탐색한다.| |4|클래스 할당|3번 단계에서 식별된 가장 빈도수가 높은 클래스를 새로운 데이터 x의 클래스로 할당한다.| ## K-최근접이웃 분류기의 특징   |특징|설명| |---|---| |결정 경계|- 가우시안 베이즈 분류기에 비해 매우 비선형적인 결정경계를 가짐<br>- 데이터 분포 형태에 따라 성능이 크게 좌우되지 않음<br>즉, 비선형적 경계를 갖는 데이터분포에서 좋은 분류성능을 보일 수 있음| |분류 시간 오래걸림|- 새로운 데이터가 주어질 때마다(분류 요청이 있을 때마다) 학습 데이터 전체와 거리 계산 필요<br>- 때문에 계산 시간이 오래 걸리며,<br>- 항상 학습 데이터를 저장하고 있어야 하기 때문에 메모리 소모| ### K-최근접이웃 분류기의 결정경계   K-최근접이웃 분류기는 확률이 아닌 \"데이터\"에 기반한 분류기이다 보니, 데이터 자체의 특성값을 더 잘 반영할 수 있다는 특징이 있다. (이를 바꾸어 말하면 데이터 노이즈에 민감하다는 단점으로도 볼 수 있다.) K-최근접이웃 분류기는 베이즈 분류기보다 매우 비선형적인 결정경계를 가지는 특징이 있으며, 데이터 분포 형태에 따라 성능이 크게 좌우되지 않는다.   예를 들어 위 그래프처럼 데이터들의 경계가 비선형적이라면, 가우시안 베이즈 분류기보다는 KNN의 분류 성능이 더 좋을 수 있다.   ![](/assets/images/20241117_001_006.png)   ### K-최근접이웃 분류기의 한계     KNN 분류모델은 데이터 간 거리를 기반으로 하여 분류를 한다는 원리를 가지고 있다. 여기서 태생적 한계점이 도출되는데, 바로 새로이 분류 대상 데이터가 주어질 때마다 모든 학습데이터와의 거리계산을 수행해야 한다는 문제점이다. 이는 `(1)분류를 할 때마다 계산해야 하므로, 계산량이 많다.` `(2)계산을 위해 항상 학습 데이터를 가지고 있어야 하므로 메모리 소모가 크다.` 라는 두 가지 문제점을 반면 베이즈 분류기의 경우엔 확률밀도함수를 기반으로 분류를 진행한다. 확률밀도함수는 평균과 표준편차에만 의존하므로, 학습시 학습 데이터를 이용해서 일단 파라미터(확률밀도함수)를 추정하고 나면 이후부터는 분류시에 학습데이터가 필요하지 않고, 학습된 파라미터 혹은 평균과 표준편차만을 이용해 분류가 가능하다는 특징이 있다. 즉, 계산량과 메모리상에 KNN보다 장점을 가지고 있다.   때문에 분류 모델을 선정할 때에는 해결해야 하는 문제의 데이터 특성과 개발 환경, 각 분류 방법이 가지는 특성을 파악해서 목적에 맞는 분류기를 선택해야 하는 안목을 길러야 한다.   ## K-최근접이웃 분류기 설계시 고려사항   |고려사항|설명| |---|---| |적절한 K의 값|- K 값(몇 개의 근접이웃)이 너무 작을 경우 노이즈에 민감, 학습 과적합<br>- K 값이 너무 클 경우 데이터 전체적인 비율(선험 확률)에 너무 의존<br>- 적절한 K값으로, 주변의 특성과 전체적인 데이터 특성을 모두 반영하도록 해야함| |거리 함수|- 데이터간 거리 계산 방법은 다양함<br>- 어떤 거리계산 방법을 사용하느냐에 따라 선택되는 이웃이 달라짐<br>- 선택되는 이웃이 달라지면 분류 성능에 직접적인 영향| ### 적절한 K의 값   KNN 모델의 K값에 따라 정확도 즉, 분류기의 성능은 크게 좌우된다. K의 값이 너무 작을 경우엔 근처의 데이터에만 적응하는 과적합 문제가 발생하고, K의 값이 너무 클 경우엔 너무 데이터 전체적인 분포(=선험 확률)에 적응하여 근처의 데이터 특성이 적응되지 않는 문제가 발생할 수도 있다. 따라서 주어진 데이터에 대해 가장 좋은 성능을 보이는 K값을 도출해내는 것은 KNN 모델 구축에 있어 굉장히 중요한 문제이다.   ![](/assets/images/20241117_001_009.png)   <i>예시 : k의 값에 따른 정확도의 차이</i> 적절한 K의 값을 찾는 데에는 여러 방법이 있을 것이지만, 특정한 정답이 있는 것은 아니며, 데이터의 특성과 문제의 특성에 맞는 K값을 찾아가는 것이 중요하다. 아래는 적정 K값을 찾기 위한 대표적인 탐색 방법 두 가지이다.   |K값 탐색 방법|설명| |---|---| |전체 데이터 수 반영|- 전체 데이터 수의 경향성에 맞춰 K 값을 지정하는 방식<br>- 예시 : 전체 데이터 수가 N일 때 `K=N의 제곱근`<br>- 여러 가지 방법 중 하나이며, K 값은 데이터 수 뿐만이 아니라 데이터 분포 특성에도 의존하므로 정답이라고 할 수 없다.| |실험적 검증|- K값에 변화를 줘가면서 실험적으로 어떤 K에서 가장 좋은 성능을 보이는지 측정하는 방법<br>- 예시 : K를 5, 10, 20, 30 으로 변화시키면서 성능 경향성을 파악<br>- 현실적인 방법이며, 따라서 많은 경우에 이 방식으로 K값을 찾는다.<br>- 다만 이 또한 정답은 아니다. 정답은 없다.| ### 거리 함수   ![](/assets/images/20241117_001_007.png)   ![](/assets/images/20241117_001_008.png)   KNN 모델에서 고려해야 할 두 번째는 거리 함수이다. 거리 함수란, 이웃과의 거리를 계산할 때 사용하는 수식 혹은 방법론을 지칭하는 말로 유클리디안 거리, 마할라노비스 거리, 코사인 거리, 노름 등 다양한 거리 함수가 있다. 위 예시에서는 각각 유클리디안 거리, 그리고 맨해튼 거리를 거리함수로 사용했을 때 선택되는 데이터가 달라지는 예시이다.   거리 함수에는 다양한 함수가 있으며, 대표적인 종류는 아래 표를 참고한다.   |번호|거리 함수| |---|---| |1|유클리디안 거리| |2|1차 노름| |3|p차 노름| |4|내적| |5|코사인 거리| |6|정규화 유클리디안 거리| |7|마할라노비스 거리| |...|...|'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,22 +89,241 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] JVM DLL not found: /Library/Java/JavaVirtualMachines/jdk-18.0.2.jdk/Contents/Home/lib/libjli.dylib",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mkonlpy\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# extract nouns\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m okt \u001b[38;5;241m=\u001b[39m konlpy\u001b[38;5;241m.\u001b[39mtag\u001b[38;5;241m.\u001b[39mOkt()\n\u001b[1;32m      5\u001b[0m nouns \u001b[38;5;241m=\u001b[39m okt\u001b[38;5;241m.\u001b[39mnouns(text)\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m# count dictionary\u001b[39;00m\n",
-      "File \u001b[0;32m~/miniconda3/envs/keyword_extractor/lib/python3.12/site-packages/konlpy/tag/_okt.py:51\u001b[0m, in \u001b[0;36mOkt.__init__\u001b[0;34m(self, jvmpath, max_heap_size)\u001b[0m\n\u001b[1;32m     49\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, jvmpath\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, max_heap_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1024\u001b[39m):\n\u001b[1;32m     50\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m jpype\u001b[38;5;241m.\u001b[39misJVMStarted():\n\u001b[0;32m---> 51\u001b[0m         jvm\u001b[38;5;241m.\u001b[39minit_jvm(jvmpath, max_heap_size)\n\u001b[1;32m     53\u001b[0m     oktJavaPackage \u001b[38;5;241m=\u001b[39m jpype\u001b[38;5;241m.\u001b[39mJPackage(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mkr.lucypark.okt\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     54\u001b[0m     OktInterfaceJavaClass \u001b[38;5;241m=\u001b[39m oktJavaPackage\u001b[38;5;241m.\u001b[39mOktInterface\n",
-      "File \u001b[0;32m~/miniconda3/envs/keyword_extractor/lib/python3.12/site-packages/konlpy/jvm.py:64\u001b[0m, in \u001b[0;36minit_jvm\u001b[0;34m(jvmpath, max_heap_size)\u001b[0m\n\u001b[1;32m     61\u001b[0m     jvmpath \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m/lib/jli/libjli.dylib\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;241m%\u001b[39m jvmpath\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/lib/\u001b[39m\u001b[38;5;124m'\u001b[39m)[\u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m     63\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m jvmpath:\n\u001b[0;32m---> 64\u001b[0m     jpype\u001b[38;5;241m.\u001b[39mstartJVM(jvmpath, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m-Dfile.encoding=UTF8\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m     65\u001b[0m                             \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m-ea\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m-Xmx\u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124mm\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mformat(max_heap_size),\n\u001b[1;32m     66\u001b[0m                             classpath\u001b[38;5;241m=\u001b[39mclasspath,\n\u001b[1;32m     67\u001b[0m                             convertStrings\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m     68\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     69\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPlease specify the JVM path.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "File \u001b[0;32m~/miniconda3/envs/keyword_extractor/lib/python3.12/site-packages/jpype/_core.py:298\u001b[0m, in \u001b[0;36mstartJVM\u001b[0;34m(jvmpath, classpath, ignoreUnrecognized, convertStrings, interrupt, *jvmargs)\u001b[0m\n\u001b[1;32m    296\u001b[0m prior \u001b[38;5;241m=\u001b[39m [locale\u001b[38;5;241m.\u001b[39mgetlocale(i) \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m categories]\n\u001b[1;32m    297\u001b[0m \u001b[38;5;66;03m# Start the JVM\u001b[39;00m\n\u001b[0;32m--> 298\u001b[0m _jpype\u001b[38;5;241m.\u001b[39mstartup(jvmpath, jvmargs \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mtuple\u001b[39m(extra_jvm_args),\n\u001b[1;32m    299\u001b[0m                ignoreUnrecognized, convertStrings, interrupt)\n\u001b[1;32m    300\u001b[0m \u001b[38;5;66;03m# Collect required resources for operation\u001b[39;00m\n\u001b[1;32m    301\u001b[0m initializeResources()\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] JVM DLL not found: /Library/Java/JavaVirtualMachines/jdk-18.0.2.jdk/Contents/Home/lib/libjli.dylib"
-     ]
+     "data": {
+      "text/plain": [
+       "[('데이터', 66),\n",
+       " ('분류기', 32),\n",
+       " ('거리', 31),\n",
+       " ('이웃', 29),\n",
+       " ('근접', 27),\n",
+       " ('최', 24),\n",
+       " ('분류', 21),\n",
+       " ('클래스', 19),\n",
+       " ('값', 19),\n",
+       " ('학습', 15),\n",
+       " ('방법', 12),\n",
+       " ('가장', 12),\n",
+       " ('의', 12),\n",
+       " ('함수', 12),\n",
+       " ('계산', 12),\n",
+       " ('문제', 10),\n",
+       " ('때', 10),\n",
+       " ('것', 9),\n",
+       " ('성능', 9),\n",
+       " ('특성', 9),\n",
+       " ('수', 8),\n",
+       " ('식별', 7),\n",
+       " ('할당', 7),\n",
+       " ('가지', 7),\n",
+       " ('과', 7),\n",
+       " ('적합', 7),\n",
+       " ('경우', 7),\n",
+       " ('전체', 7),\n",
+       " ('설명', 6),\n",
+       " ('모델', 6),\n",
+       " ('이', 6),\n",
+       " ('확률', 6),\n",
+       " ('문제점', 5),\n",
+       " ('잡음', 5),\n",
+       " ('참고', 5),\n",
+       " ('베', 5),\n",
+       " ('이즈', 5),\n",
+       " ('개', 5),\n",
+       " ('를', 5),\n",
+       " ('특징', 5),\n",
+       " ('분포', 5),\n",
+       " ('예시', 5),\n",
+       " ('개념', 4),\n",
+       " ('대해', 4),\n",
+       " ('결정', 4),\n",
+       " ('즉', 4),\n",
+       " ('발생', 4),\n",
+       " ('때문', 4),\n",
+       " ('정확도', 4),\n",
+       " ('집합', 4),\n",
+       " ('중', 4),\n",
+       " ('빈도', 4),\n",
+       " ('탐색', 4),\n",
+       " ('비선형', 4),\n",
+       " ('선택', 4),\n",
+       " ('정답', 4),\n",
+       " ('유', 4),\n",
+       " ('클리', 4),\n",
+       " ('디안', 4),\n",
+       " ('근처', 3),\n",
+       " ('아래', 3),\n",
+       " ('순서', 3),\n",
+       " ('단계', 3),\n",
+       " ('모든', 3),\n",
+       " ('점', 3),\n",
+       " ('하나', 3),\n",
+       " ('후보', 3),\n",
+       " ('각', 3),\n",
+       " ('등장', 3),\n",
+       " ('경계', 3),\n",
+       " ('결정경', 3),\n",
+       " ('크게', 3),\n",
+       " ('좌우', 3),\n",
+       " ('메모리', 3),\n",
+       " ('기반', 3),\n",
+       " ('반영', 3),\n",
+       " ('위', 3),\n",
+       " ('두', 3),\n",
+       " ('밀도', 3),\n",
+       " ('의존', 3),\n",
+       " ('고려', 3),\n",
+       " ('사용', 3),\n",
+       " ('노름', 3),\n",
+       " ('생각', 2),\n",
+       " ('볼', 2),\n",
+       " ('바로', 2),\n",
+       " ('식화', 2),\n",
+       " ('간', 2),\n",
+       " ('처리', 2),\n",
+       " ('과정', 2),\n",
+       " ('민감', 2),\n",
+       " ('현실', 2),\n",
+       " ('테스트', 2),\n",
+       " ('율', 2),\n",
+       " ('말', 2),\n",
+       " ('차이', 2),\n",
+       " ('확인', 2),\n",
+       " ('속', 2),\n",
+       " ('각각', 2),\n",
+       " ('번', 2),\n",
+       " ('수가', 2),\n",
+       " ('가우', 2),\n",
+       " ('시안', 2),\n",
+       " ('매우', 2),\n",
+       " ('형태', 2),\n",
+       " ('시간', 2),\n",
+       " ('항상', 2),\n",
+       " ('소모', 2),\n",
+       " ('더', 2),\n",
+       " ('노이즈', 2),\n",
+       " ('한계', 2),\n",
+       " ('도출', 2),\n",
+       " ('계산량', 2),\n",
+       " ('평균', 2),\n",
+       " ('표준편차', 2),\n",
+       " ('시', 2),\n",
+       " ('이용', 2),\n",
+       " ('파라미터', 2),\n",
+       " ('파악', 2),\n",
+       " ('사항', 2),\n",
+       " ('작', 2),\n",
+       " ('선', 2),\n",
+       " ('따라서', 2),\n",
+       " ('여러', 2),\n",
+       " ('대표', 2),\n",
+       " ('경향', 2),\n",
+       " ('방식', 2),\n",
+       " ('실험', 2),\n",
+       " ('변화', 2),\n",
+       " ('마', 2),\n",
+       " ('노비', 2),\n",
+       " ('스', 2),\n",
+       " ('코사인', 2),\n",
+       " ('차', 2),\n",
+       " ('규칙', 1),\n",
+       " ('식', 1),\n",
+       " ('표현', 1),\n",
+       " ('그것', 1),\n",
+       " ('상치', 1),\n",
+       " ('일반', 1),\n",
+       " ('의미', 1),\n",
+       " ('이상', 1),\n",
+       " ('치인', 1),\n",
+       " ('가능성', 1),\n",
+       " ('세계', 1),\n",
+       " ('앞서', 1),\n",
+       " ('일정', 1),\n",
+       " ('부분', 1),\n",
+       " ('면', 1),\n",
+       " ('구분', 1),\n",
+       " ('순서대로', 1),\n",
+       " ('선별', 1),\n",
+       " ('뒤', 1),\n",
+       " ('포함', 1),\n",
+       " ('보완', 1),\n",
+       " ('순', 1),\n",
+       " ('빈', 1),\n",
+       " ('도수', 1),\n",
+       " ('가짐', 1),\n",
+       " ('요청', 1),\n",
+       " ('필요', 1),\n",
+       " ('저장', 1),\n",
+       " ('자체', 1),\n",
+       " ('단점', 1),\n",
+       " ('예', 1),\n",
+       " ('그래프', 1),\n",
+       " ('라면', 1),\n",
+       " ('원리', 1),\n",
+       " ('여기', 1),\n",
+       " ('태생', 1),\n",
+       " ('새로이', 1),\n",
+       " ('대상', 1),\n",
+       " ('수행', 1),\n",
+       " ('위해', 1),\n",
+       " ('반면', 1),\n",
+       " ('진행', 1),\n",
+       " ('일단', 1),\n",
+       " ('추정', 1),\n",
+       " ('이후', 1),\n",
+       " ('장점', 1),\n",
+       " ('선정', 1),\n",
+       " ('해결', 1),\n",
+       " ('개발', 1),\n",
+       " ('환경', 1),\n",
+       " ('목적', 1),\n",
+       " ('안목', 1),\n",
+       " ('설', 1),\n",
+       " ('계시', 1),\n",
+       " ('몇', 1),\n",
+       " ('비율', 1),\n",
+       " ('주변', 1),\n",
+       " ('모두', 1),\n",
+       " ('함', 1),\n",
+       " ('달라짐', 1),\n",
+       " ('직접', 1),\n",
+       " ('영향', 1),\n",
+       " ('적응', 1),\n",
+       " ('수도', 1),\n",
+       " ('구축', 1),\n",
+       " ('데', 1),\n",
+       " ('적정', 1),\n",
+       " ('찾기', 1),\n",
+       " ('수의', 1),\n",
+       " ('지정', 1),\n",
+       " ('일', 1),\n",
+       " ('제곱근', 1),\n",
+       " ('뿐', 1),\n",
+       " ('검증', 1),\n",
+       " ('측정', 1),\n",
+       " ('다만', 1),\n",
+       " ('또한', 1),\n",
+       " ('란', 1),\n",
+       " ('수식', 1),\n",
+       " ('방법론', 1),\n",
+       " ('지칭', 1),\n",
+       " ('말로', 1),\n",
+       " ('등', 1),\n",
+       " ('맨해튼', 1),\n",
+       " ('거리함수', 1),\n",
+       " ('종류', 1),\n",
+       " ('표', 1),\n",
+       " ('번호', 1),\n",
+       " ('내적', 1),\n",
+       " ('정규화', 1)]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -136,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,11 +364,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "utils.save_nouns()"
+    "path = os.getcwd() + '/documents/test_result.txt'\n",
+    "utils.save_nouns(path, nouns)"
    ]
   },
   {
