--- a/20241119_discord_keyword_extractor/build_code.ipynb
+++ b/20241119_discord_keyword_extractor/build_code.ipynb
@@ -13,6 +13,7 @@
     "\n",
     "# 기능 정의\n",
     "# (1) API 통신 (Flask)\n",
+    "# (1) Discord Websocket (https://chatgpt.com/share/67413e48-ff64-800f-bc4f-8edd6c39bd56)\n",
     "# (2) 키워드 추출 기능, Tf-idf와 같이 이 문서의 특징을 더 잘 뽑아낼 수 있게 해야 함\n",
     "# (3) 글의 부제목을 작성해주는 기능 ..? 이건 어떻게..?\n",
     "# (4) 키워드 추출 요청했던 문서 이력을 누적하기 (추후 Tf-idf 성능 업)\n",
