--- a/20241119_discord_keyword_extractor/build_code.ipynb
+++ b/20241119_discord_keyword_extractor/build_code.ipynb
@@ -29,6 +29,32 @@
     "# build_code.ipynb : 전체적인 코드 구축 연습장\n",
     "# test_code.ipynb : 단편적인 기능 구축 연습장\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class KeywordExtractor:\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        self.target_text = ''\n",
+    "        self.existed_texts = []\n",
+    "        self.keyword_list = []\n",
+    "    \n",
+    "    def extract_nouns(text):\n",
+    "        # extract nouns\n",
+    "        nouns_list = []\n",
+    "        return nouns_list\n",
+    "    \n",
+    "    def tf_idf(self):\n",
+    "        # tf_idf between this text and existed texta\n",
+    "        target_text = self.target_text\n",
+    "        existed_texts = self.existed_texts\n",
+    "        keyword_list = []\n",
+    "        return keyword_list\n"
+   ]
   }
  ],
  "metadata": {
