--- a/20240225_pyautogui/auto_gui.ipynb
+++ b/20240225_pyautogui/auto_gui.ipynb
@@ -2,19 +2,65 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pyautogui\n",
-    "import keyboard\n",
+    "# import keyboard\n",
+    "from pynput.keyboard import Key, Controller\n",
     "import time\n",
     "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "keyboard = Controller()\n",
+    "pyautogui.click(x=1800, y=800)\n",
+    "time.sleep(0.5)\n",
+    "pages = 567\n",
+    "\n",
+    "for i in range(pages):\n",
+    "    keyboard.press(Key.cmd)\n",
+    "    keyboard.press(Key.shift)\n",
+    "    keyboard.press('5')\n",
+    "    time.sleep(0.3)  # 짧은 지연 시간\n",
+    "    keyboard.release('5')\n",
+    "    keyboard.release(Key.shift)\n",
+    "    keyboard.release(Key.cmd)\n",
+    "    time.sleep(0.5)\n",
+    "    pyautogui.press('enter')\n",
+    "    time.sleep(0.5)\n",
+    "    # pyautogui.press('right')\n",
+    "    pyautogui.click(x=2550, y=800)\n",
+    "    time.sleep(0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pyautogui.hotkey('shift', 'command', '5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pyautogui.click(x=2550, y=800)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +147,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
